--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="testimonial-row">
                         <div class="testimonial-col">
                             <div class="user">
-                                <img src="team1.jpg">
+                                <img src="team1.JPG">
                                 <div class="user-info">
                                     <h4>JADA GOPI  <i class="fa fa-twitter" ></i></h4>
                                     <small>@gopigo1</small>
@@ -137,7 +137,7 @@
                         </div>
                         <div class="testimonial-col">
                             <div class="user">
-                                <img src="team2.jpg">
+                                <img src="team2.JPG">
                                 <div class="user-info">
                                     <h4>CHARAN  <i class="fa fa-twitter" ></i></h4>
                                     <small>@iamcharan</small>
@@ -148,7 +148,7 @@
                         </div>
                         <div class="testimonial-col">
                             <div class="user">
-                                <img src="team3.jpg">
+                                <img src="team3.JPG">
                                 <div class="user-info">
                                     <h4>BHANU PRAKASH  <i class="fa fa-twitter" ></i></h4>
                                     <small>@bhanu28</small>
