--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     }
                     else{
                         sideNav.style.right="-150px";
-                        menu.src="menu.png"
+                        menu.src="Menu.png"
                     }
                 }
                 var scroll = new SmoothScroll('a[href*="#"]', {
